2012-12-13  Beth Dakin  <bdakin@apple.com>

        Rubber-stamped by Tim Horton.

        This test needs updates results after http://trac.webkit.org/changeset/137393

        * platform/mac/svg/css/shadow-changes-expected.txt:

2012-12-13  Tab Atkins  <tabatkins@google.com>

        Switch the gradient drawing code to use bearing angles
        https://bugs.webkit.org/show_bug.cgi?id=104616

        Reviewed by Dean Jackson.

        This change alters a few pixels on the linux baseline.
        It may or may not trigger similar failures on Windows and Mac - we'll see.

        * platform/chromium-linux/fast/gradients/css3-linear-angle-gradients-expected.png:
        * platform/chromium/TestExpectations:

2012-12-13  Adam Klein  <adamk@chromium.org>

        Mark one test as failing and rebaseline another after r137646

        Unreviewed chromium gardening.

        * platform/chromium-mac-lion/platform/chromium/virtual/gpu/compositedscrolling/scrollbars/custom-scrollbar-with-incomplete-style-expected.png: Added.
        * platform/chromium-mac-snowleopard/platform/chromium/virtual/gpu/compositedscrolling/scrollbars/custom-scrollbar-with-incomplete-style-expected.png: Added.
        * platform/chromium-mac/platform/chromium/virtual/gpu/compositedscrolling/scrollbars/custom-scrollbar-with-incomplete-style-expected.png: Added.
        * platform/chromium/TestExpectations:

2012-12-13  Adam Klein  <adamk@chromium.org>

        Move MutationObserver tests to fast/dom/MutationObserver
        https://bugs.webkit.org/show_bug.cgi?id=104948

        Reviewed by Ryosuke Niwa.

        This seems like a more sensible location, and in line with other DOM features.

        * fast/dom/MutationObserver/: Renamed from LayoutTests/fast/mutation/.
        * platform/efl-wk2/TestExpectations:
        * platform/efl/TestExpectations:
        * platform/gtk-wk2/TestExpectations:
        * platform/gtk/TestExpectations:
        * platform/mac/TestExpectations: