@@ -704,7 +704,7 @@ void CachedResourceLoader::loadDone(CachedResource* resource)
 
 #if ENABLE(RESOURCE_TIMING)
     // FIXME: Add resource timing support for main resources.
-    if (resource && resource->type() != CachedResource::MainResource && !resource->errorOccurred() && !resource->wasCanceled()) {
+    if (resource && resource->type() != CachedResource::MainResource && !resource->errorOccurred() && !resource->wasCanceled() && resource->response().isHTTP()) {
         HashMap<CachedResource*, InitiatorInfo>::iterator initiatorIt = m_initiatorMap.find(resource);
         if (initiatorIt != m_initiatorMap.end()) {
             ASSERT(document());
