@@ -1,3 +1,15 @@
+2012-12-13  James Simonsen  <simonjam@chromium.org>
+
+        [Resource Timing] Don't report resources with data: urls
+        https://bugs.webkit.org/show_bug.cgi?id=104868
+
+        Reviewed by Tony Gentilcore.
+
+        Test: http/tests/w3c/webperf/submission/resource-timing/html/test_resource_ignore_data_url.html
+
+        * loader/cache/CachedResourceLoader.cpp:
+        (WebCore::CachedResourceLoader::loadDone):
+
 2012-12-13  Ian Vollick  <vollick@chromium.org>
 
         Add a missing nullity check in RenderObject::containingBlock
