@@ -1,3 +1,13 @@
+2012-12-13  James Simonsen  <simonjam@chromium.org>
+
+        [Resource Timing] Don't report resources with data: urls
+        https://bugs.webkit.org/show_bug.cgi?id=104868
+
+        Reviewed by Tony Gentilcore.
+
+        * http/tests/w3c/webperf/submission/resource-timing/html/test_resource_ignore_data_url-expected.txt: Added.
+        * http/tests/w3c/webperf/submission/resource-timing/html/test_resource_ignore_data_url.html: Added.
+
 2012-12-13  Beth Dakin  <bdakin@apple.com>
 
         Rubber-stamped by Tim Horton.
